# aws-serverless-toolkit-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  package.json
.cargo/: config
npm/: getBinary.js
src/: args.rs  helper.rs  main.rs  types.rs
src/args/: add.rs  clear.rs  new.rs
