[package]
name = "ast-cli"
version = "0.0.1"
authors = ["Joseph Sawaya <josephsawaya938@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer="0.6.2"
indicatif="0.15.0"
colored = "2.0.0"
yaml-rust = "0.4.5"

